First commited as before_65043_rev1