@@ -11,8 +11,10 @@
 package org.eclipse.ui.internal.preferences;
 
 import java.util.Set;
+
 import org.eclipse.jface.preference.IPreferenceStore;
 import org.eclipse.jface.util.IPropertyChangeListener;
+import org.eclipse.jface.util.PropertyChangeEvent;
 
 /**
  * @since 3.1
@@ -21,7 +23,12 @@ public final class PreferenceStoreAdapter extends PropertyMapAdapter {
 
     private IPreferenceStore store;
 
-    private IPropertyChangeListener listener = event -> firePropertyChange(event.getProperty());
+    private IPropertyChangeListener listener = new IPropertyChangeListener() {
+        @Override
+		public void propertyChange(PropertyChangeEvent event) {
+            firePropertyChange(event.getProperty());
+        }
+    };
 
     public PreferenceStoreAdapter(IPreferenceStore toConvert) {
         this.store = toConvert;
@@ -61,7 +68,7 @@ public final class PreferenceStoreAdapter extends PropertyMapAdapter {
         }
 
         if (propertyType == Integer.class) {
-			return Integer.valueOf(store.getInt(propertyId));
+            return new Integer(store.getInt(propertyId));
         }
 
         if (propertyType == Long.class) {
